--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,24 @@ License: GPL (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends: 
+    R (>= 4.0),
+    sf (>= 0.9-7),
+    stars (>= 0.5-1),
+    tidyverse (>= 1.3.0),
+    magrittr (>= 2.0.1),
+    mapview(>= 2.9.8),
+    graphicsutils(>= 1.6.0)
 Imports: 
-    devtools,
-    here
+    exactextractr,
+    fs,
+    glue,
+    hexSticker,
+    magick,
+    pipedat,
+    raster,
+    sp,
+    stringr
+    units,
+    whisker,
+    yaml
