--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,22 +17,18 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: 
-    R (>= 4.0),
-    sf (>= 0.9-7),
-    stars (>= 0.5-1),
-    tidyverse (>= 1.3.0),
-    magrittr (>= 2.0.1),
-    mapview(>= 2.9.8),
-    graphicsutils(>= 1.6.0)
+    R (>= 4.0)
 Imports: 
+    data.table,
+    dplyr,
     exactextractr,
     fs,
     glue,
-    hexSticker,
-    magick,
+    graphicsutils,
     pipedat,
-    raster,
-    sp,
+    mapview,
+    sf,
+    stars,
     stringr,
     units,
     whisker,
